fixed letter spacing on mac

--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -66,7 +66,6 @@ h4 {
     font-weight: 600;
     line-height: 1.25em;
     padding:0 0 12px 0;
-    letter-spacing: 1px;
 }
 .section h2
 {
